<resources>
    <string name="app_name">My Application</string>
    <string name="image_description_card">Credit Card</string>
    <string name="image_description_chip">Chip</string>
    <string name="image_description_logo">Bank logo</string>
    <string name="label_et_number">Card Number</string>
    <string name="label_et_name">Card Name</string>
    <string name="label_spinner_expires">Expiration Date</string>
    <string name="label_cvv">CVV</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_tv_name">Card Holder</string>
    <string name="label_tv_expires">Expires</string>
    <string name="placeholder_tv_number">####\ \ \ \ \ ####\ \ \ \ \ ####\ \ \ \ \ ####</string>
    <string name="placeholder_tv_name">Full Name</string>
    <string name="placeholder_tv_expires">MM/YY</string>
</resources>
