<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">


    <!-- Helpers -->

    <FrameLayout
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/padding"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_submit"/>


    <!-- Form -->

    <FrameLayout
        android:id="@+id/form_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/form_background"
        app:layout_constraintTop_toBottomOf="@id/guide"
        app:layout_constraintBottom_toBottomOf="@id/padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Form: Card Number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_et_number"
        app:layout_constraintBottom_toTopOf="@id/et_number"
        app:layout_constraintStart_toStartOf="@id/et_number"
        android:labelFor="@id/et_number"/>
    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"/>

    <!-- Form: Card Number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_et_name"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        android:labelFor="@id/et_name"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/et_number"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp" />

    <!-- Form: Card Number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_et_cvv"
        app:layout_constraintBottom_toTopOf="@id/et_cvv"
        app:layout_constraintStart_toStartOf="@id/et_cvv"
        android:labelFor="@id/et_cvv"/>
    <EditText
        android:id="@+id/et_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp" />


    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:text="@string/label_button_submit"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/et_cvv"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>


    <!-- Credit Card -->

    <FrameLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/card_back"
            layout="@layout/card_back"
            android:alpha="0.0" />

        <include
            android:id="@+id/card_front"
            layout="@layout/card_front" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>